<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InClass07</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_sortbytitle_az">Sort By Title A-Z</string>
    <string name="action_sortbytitle_za">Sort By Title Z-A</string>
    <string name="action_sortbydate_asc">Pub Date Ascending</string>
    <string name="action_sortbydate_dsc">Pub Date Descending</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
    <string name="title_activity_news_web_view">NewsWebViewActivity</string>
    <string name="loading_news">Loading News...</string>
    <string name="noInternet">No Internet...</string>
    <string name="noResults">No Results...</string>
    <string name="description">Description</string>
    <string name="show_new">Show New Stories</string>
    <string name="delete_history">Clear My History</string>
    
    
    

</resources>